# docs/swagger.json
@@ -45,6 +45,14 @@
                     "debts"
                 ],
                 "summary": "Show debts",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Debt id",
+                        "name": "overdue",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
